--- a/package.json
+++ b/package.json
@@ -22,9 +22,14 @@
   "homepage": "https://github.com/LambdaSchool/node-server-testing#readme",
   "devDependencies": {
     "jest": "^24.9.0",
+    "nodemon": "^1.19.2",
     "supertest": "^4.0.2"
   },
   "dependencies": {
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "helmet": "^3.21.0",
+    "knex": "^0.19.4",
+    "knex-cleaner": "^1.3.0",
+    "sqlite3": "^4.1.0"
   }
 }
