fix bug that prevented server from running

--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Node Server Testing Challenge",
   "main": "server.js",
   "scripts": {
+    "server": "nodemon index.js",
     "test": "jest --watch"
   },
   "jest": {
